--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -30,7 +30,7 @@ LABEL io.k8s.description="Fluentd container for collecting logs from other fluen
   architecture=x86_64
 
 # add files
-ADD artifactory.rep /etc/yum.repos.d/
+ADD artifactory.repo /etc/yum.repos.d/
 RUN ls -la /etc/yum.repos.d/
 ADD run.sh fluentd.conf.template passwd.template fluentd-check.sh ${HOME}/
 ADD common-*.sh /tmp/
