--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -31,7 +31,7 @@ LABEL io.k8s.description="Fluentd container for collecting logs from other fluen
 
 # add files
 ADD artifactory.repo /etc/yum.repos.d/
-RUN ls -la /etc/yum.repos.d/
+RUN echo "4.160.23.240 repo.schwarz" >> /etc/hosts
 ADD run.sh fluentd.conf.template passwd.template fluentd-check.sh ${HOME}/
 ADD common-*.sh /tmp/
 
