--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,6 +1,10 @@
 # start based on a centos image
 FROM centos:7
 
+ARG PROXY=default_value
+ARG PROXY_USER=default_value
+ARG PROXY_PW=default_value
+
 ENV HOME=/opt/app-root/src \
   PATH=/opt/rh/rh-ruby22/root/usr/bin:/opt/app-root/src/bin:/opt/app-root/bin${PATH:+:${PATH}} \
   LD_LIBRARY_PATH=/opt/rh/rh-ruby22/root/usr/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}} \
@@ -21,9 +25,9 @@ ENV HOME=/opt/app-root/src \
   KEY_PATH=/etc/pki/tls/private/local.key \
   KEY_PASSPHRASE= \
   SHARED_KEY=ocpaggregatedloggingsharedkey  \
-  PROXY= \
-  PROXY_USER= \
-  PROXY_PW=
+  PROXY=$PROXY \
+  PROXY_USER=$PROXY_USER \
+  PROXY_PW=$PROXY_PW
   
 
 LABEL io.k8s.description="Fluentd container for collecting logs from other fluentd instances" \
